syntax = "proto3";
package protobuf;
option go_package = "github.com/sath-run/engine/pkg/protobuf";

enum EnumExecStatus {
  UNSPECIFIED = 0;
	STARTED = 10;
	PULLING_IMAGE = 20;
  DOWNLOADING_INPUTS = 30;
  PROCESSING_INPUTS = 40; 
  RUNNING = 50;
  PROCESSING_OUPUTS = 60;
  UPLOADING_OUTPUTS = 70;
	SUCCESS = 80;
	CANCELED = 90;
	ERROR = 100;
  PAUSED = 110;
}

message JobGetRequest {
  string version = 1;
  string project_id = 2;
  string organization_id = 3;
  string user_id = 4;
}

message JobGetResponse {
  string project_id = 1;
  string job_id = 2;
  string exec_id = 3;
  Image image = 4;
  repeated string cmd = 5;
  repeated File inputs = 6;
  File output = 7;
  string gpu_opts = 8;
  Volume volume = 9;
  bool redirected_upload = 10;
}

message Volume {
  string data = 1;
  string source = 2;
  string output = 3;
}

message File {
  string name = 1;
  string url = 2;
  EnumFileRequestMethod method = 3; 
  map<string, string> headers = 4; 
  map<string, string> data = 5;
  EnumFileOperation preprocess = 6;
}

message Image {
  string url = 1;
  string auth = 2;
}

enum EnumFileRequestMethod {
  EFRM_HTTP_GET = 0;
  EFRM_HTTP_POST = 1;
  EFRM_HTTP_PUT = 2;
}

enum EnumFileOperation {
  EFO_DEFAULT = 0;
  EFO_UNTAR = 1;
  EFO_UNZIP = 2;
  EFO_TAR = 3;
  EFO_ZIP = 4;
}

message ExecNotificationRequest {
  EnumExecStatus status = 1;
  string message = 2;
  float progress = 3;
}

message ExecNotificationResponse {

}