syntax = "proto3";
package protobuf;
option go_package = "github.com/sath-run/engine/pkg/protobuf";

enum EnumTaskStatus {
  EJS_UNSPECIFIED = 0;
	EJS_READY = 10;
	EJS_PULLING_IMAGE = 20;
  EJS_PROCESSING_INPUTS = 25;
	EJS_RUNNING = 30;
  EJS_PROCESSING_OUPUTS = 35;
	EJS_POPULATING = 40;
	EJS_SUCCESS = 50;
	EJS_CANCELLED = 60;
	EJS_ERROR = 70;
}

message TaskGetRequest {
  string version = 1;
  string job_id = 2;
  string organization_id = 3;
  string user_id = 4;
}

message TaskGetResponse {
  string job_id = 1;
  string task_id = 2;
  string exec_id = 3;
  string image_url = 4;
  repeated string cmd = 5;
  repeated File inputs = 6;
  File output = 7;
  string gpu_opts = 8;
  Volume volume = 9;
}

message Volume {
  string data = 1;
  string source = 2;
  string output = 3;
}

message File {
  string name = 1;
  string url = 2;
  EnumFileRequestMethod method = 3; 
  map<string, string> headers = 4; 
  map<string, string> data = 5;
  EnumFileOperation preprocess = 6;
}

enum EnumFileRequestMethod {
  EFRM_HTTP_GET = 0;
  EFRM_HTTP_POST = 1;
  EFRM_HTTP_PUT = 2;
}

enum EnumFileOperation {
  EFO_DEFAULT = 0;
  EFO_UNTAR = 1;
  EFO_UNZIP = 2;
  EFO_TAR = 3;
  EFO_ZIP = 4;
}

message TaskNotificationRequest {
  string task_id = 1;
  string exec_id = 2;
  EnumTaskStatus status = 3;
  string message = 4;
}

message TaskNotificationResponse {

}